--- a/style.css
+++ b/style.css
@@ -81,7 +81,8 @@ table {
     background-color: #ffab00;
     width: 100px;
     border: 1px solid black;
-    right: 58px;
+    right: 60px;
+    top: 13px;
     border-radius: 8px; }
     .header nav:hover ul li {
       border-bottom: 2px solid darkgrey;
