--- a/style/_header.scss
+++ b/style/_header.scss
@@ -46,7 +46,8 @@
 			background-color: $primary;
 			width: 100px;
 			border: 1px solid black;
-			right: 58px;
+			right: 60px;
+			top: 13px;
 			border-radius: 8px;
 			li {
 				border-bottom: 2px solid darkgrey;
