--- a/style/_events.scss
+++ b/style/_events.scss
@@ -34,6 +34,7 @@
 		-webkit-transition: transform .5s;
 		transition: transform .5s;
 	}
+	//sliding animation
 	a:hover {
 		@include moving(20px);
 	}
