--- a/style/_presets.scss
+++ b/style/_presets.scss
@@ -1,5 +1,6 @@
 //color variables
-$primary: #ffab00;
+$primary: #ffc400;
+$headerprimary: #ffab00;
 $headerblue: #064159;
 $headerbrown: #72261d;
 $tabred: #eb503c;
@@ -25,5 +26,6 @@ $footerblue: #6f8998;
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.8px;
+    font-family: "Droid Serif";
   }
 }
