--- a/style/style.scss
+++ b/style/style.scss
@@ -1,6 +1,7 @@
 @import "reset";
 @import "presets";
 @import "header";
-@import "events";
 @import "hero";
 @import "footer";
+@import "main-section";
+@import "events";
