--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
    License: none (public domain)
 */
 html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, .event h5, .event a, h5, .event a, h6, p, blockquote, pre,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
@@ -86,7 +86,7 @@ table {
     top: 13px;
     border-radius: 8px; }
     .header nav:hover ul li {
-      border-bottom: 2px solid darkgrey;
+      border-bottom: 2px solid #eb503c;
       display: block;
       height: 50px; }
       .header nav:hover ul li a {
@@ -101,8 +101,75 @@ table {
       .header nav:hover ul li a:hover {
         background-color: #eb503c; }
 
+.hero {
+  background-image: url("images/hero.jpg");
+  background-position: 0 -40px;
+  height: 300px; }
+  .hero h1 {
+    color: #efe9d8;
+    padding: 108px 30% 0 27px;
+    line-height: 42px;
+    letter-spacing: 1.8px;
+    font-size: 36px;
+    font-family: 'Lato';
+    font-weight: 900; }
+
+.footer {
+  width: 100%;
+  padding: 35px 0; }
+  .footer h3 {
+    text-align: center;
+    size: 16px;
+    line-height: 28px;
+    letter-spacing: 0.8px;
+    color: #6f8998; }
+
+.main-section {
+  padding: 0 10px;
+  background-color: #ffc400; }
+  .main-section article {
+    width: 90%;
+    padding: 34px 5%; }
+    .main-section article p {
+      margin-top: 15px;
+      color: #021d2c;
+      font-size: 15px;
+      line-height: 24px;
+      letter-spacing: 0.8px;
+      font-family: "Droid Serif"; }
+    .main-section article p:first-of-type {
+      margin-top: 0px;
+      font-size: 18px;
+      line-height: 28px;
+      letter-spacing: 0.9px;
+      color: #4e1c07;
+      font-family: "Droid Serif";
+      font-weight: 700; }
+  .main-section h4 {
+    color: #eb503c;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.8px;
+    font-family: "Lato";
+    font-weight: 700; }
+  .main-section div {
+    width: 90%;
+    padding: 0 5% 34px; }
+    .main-section div h3 {
+      padding: 7px 0;
+      color: #4c1a14;
+      font-size: 21px;
+      line-height: 24px;
+      letter-spacing: 1.1px;
+      font-family: "Droid Serif";
+      font-weight: 700; }
+  .main-section .underbar {
+    width: 90%;
+    padding: 34px 5%;
+    border-top: 2px solid #eb503c; }
+
 .event {
-  width: 260px; }
+  width: 255px !important; }
   .event h3 {
     color: #4c1a14;
     font-size: 21px;
@@ -110,14 +177,14 @@ table {
     letter-spacing: 1.1px;
     font-family: 'Droid Serif';
     font-weight: 700; }
-  .event h4, .event h5, .event a {
+  .event .eh4, .event .eh5, .event a {
     color: #021d2c;
     font-size: 18px;
     line-height: 32px;
     letter-spacing: .9px;
     font-family: 'Lato';
     font-weight: 700; }
-  .event h5, .event a {
+  .event .eh5, .event a {
     font-size: 16px;
     letter-spacing: .8px;
     font-weight: 400; }
@@ -136,28 +203,5 @@ table {
     -moz-transform: translate(20px);
     -o-transform: translate(20px);
     transform: translate(20px); }
-
-.hero {
-  background-image: url("images/hero.jpg");
-  background-position: 0 -40px;
-  height: 300px; }
-  .hero h1 {
-    color: #efe9d8;
-    padding: 108px 30% 0 27px;
-    line-height: 42px;
-    letter-spacing: 1.8px;
-    font-size: 36px;
-    font-family: 'Lato';
-    font-weight: 900; }
-
-.footer {
-  width: 100%;
-  padding-top: 35px; }
-  .footer h3 {
-    text-align: center;
-    size: 16px;
-    line-height: 28px;
-    letter-spacing: 0.8px;
-    color: #6f8998; }
 
 /*# sourceMappingURL=style.css.map */
