--- a/style/_events.scss
+++ b/style/_events.scss
@@ -1,6 +1,6 @@
 //mobile
 .event {
-	width: 255px !important;
+	width: 255px !important;//important set to overide div section in _main-section
 	h3 {
 		color: $secondbrown;
 		font-size: 21px;
