--- a/style/_hero.scss
+++ b/style/_hero.scss
@@ -13,3 +13,8 @@
 		font-weight: 900;
 	}
 }
+@media screen and(min-width: 765px) {
+    .hero {
+        display: none;// used as a test for the media query
+    }
+}
