--- a/style.css
+++ b/style.css
@@ -66,12 +66,10 @@ table {
   .header .logo:hover {
     color: #efe9d8; }
   .header nav {
-    top: 0px;
     float: right;
     margin: 12px;
     width: 30px;
-    height: 30px;
-    border-radius: 50px; }
+    height: 30px; }
     .header nav img {
       height: 100%;
       width: 100%; }
@@ -87,7 +85,7 @@ table {
     left: 20%;
     top: 50px; }
     .header nav:hover ul li {
-      width: 102%;
+      width: 100%;
       border-top: 2px solid #eb503c;
       display: block;
       height: 25px; }
@@ -106,6 +104,59 @@ table {
     .header nav:hover ul li:first-of-type {
       border-top: 2px; }
 
+@media screen and (min-width: 765px) {
+  .header {
+    height: 77px; }
+    .header nav {
+      float: right;
+      margin: 0;
+      width: 630px;
+      height: 100%; }
+      .header nav img {
+        display: none; }
+      .header nav ul {
+        display: inline-block; }
+      .header nav li {
+        padding: 0 25px;
+        display: inline-block; }
+        .header nav li a {
+          color: #72261d;
+          font-family: "Lato";
+          font-weight: 700;
+          font-size: 16px;
+          letter-spacing: 0.8px;
+          line-height: 77px;
+          text-align: center;
+          text-decoration: none;
+          display: block; }
+    .header nav:hover ul {
+      padding: 0 1%;
+      display: block;
+      position: absolute;
+      background-color: #ffab00;
+      width: 77.5%;
+      border: 1px solid black;
+      left: 20%;
+      top: 50px; }
+      .header nav:hover ul li {
+        width: 100%;
+        border-top: 2px solid #eb503c;
+        display: block;
+        height: 25px; }
+        .header nav:hover ul li a {
+          color: #72261d;
+          line-height: 25px;
+          text-align: center;
+          text-decoration: none;
+          display: block;
+          height: 100%;
+          width: 100%;
+          -webkit-transition: background-color .5s;
+          transition: background-color .5s; }
+        .header nav:hover ul li a:hover {
+          background-color: #eb503c; }
+      .header nav:hover ul li:first-of-type {
+        border-top: 2px; } }
 .hero {
   background-image: url("images/hero.jpg");
   background-position: 0 -40px;
@@ -119,6 +170,9 @@ table {
     font-family: 'Lato';
     font-weight: 900; }
 
+@media screen and (min-width: 765px) {
+  .hero {
+    display: none; } }
 .footer {
   width: 100%;
   padding: 35px 0; }
@@ -129,6 +183,9 @@ table {
     letter-spacing: 0.8px;
     color: #6f8998; }
 
+@media screen and (min-width: 765px) {
+  .footer {
+    display: none; } }
 .main_section {
   padding: 0 10px;
   background-color: #ffc400; }
@@ -192,6 +249,9 @@ table {
     padding: 34px 5%;
     border-top: 2px solid #eb503c; }
 
+@media screen and (min-width: 765px) {
+  .main_section {
+    display: none; } }
 .event {
   width: 255px !important; }
   .event h3 {
@@ -230,6 +290,9 @@ table {
     -o-transform: translate(20px);
     transform: translate(20px); }
 
+@media screen and (min-width: 765px) {
+  .event {
+    display: none; } }
 .core_values {
   padding: 55px 20px;
   color: #021d2c;
@@ -290,6 +353,15 @@ table {
     font-weight: 700;
     font-style: italic; }
 
+@media screen and (min-width: 765px) {
+  .core_values {
+    display: none; }
+
+  .greybox {
+    display: none; }
+
+  .normal_sections {
+    display: none; } }
 .schedule {
   padding: 55px 20px;
   color: #021d2c;
@@ -360,5 +432,15 @@ table {
 
 .start_meetup {
   background-color: #a13729; }
+
+@media screen and (min-width: 765px) {
+  .schedule {
+    display: none; }
+
+  .get_involved, .start_meetup {
+    display: none; }
+
+  .start_meetup {
+    display: none; } }
 
 /*# sourceMappingURL=style.css.map */
