--- a/style/_calendar.scss
+++ b/style/_calendar.scss
@@ -51,3 +51,14 @@
     @extend .get_involved;
     background-color: $tabbrown;
 }
+@media screen and(min-width: 765px) {
+    .schedule {
+        display: none;// used as a test for the media query
+    }
+    .get_involved {
+        display: none;// used as a test for the media query
+    }
+    .start_meetup {
+        display: none;// used as a test for the media query
+    }
+}
