--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -10,3 +10,8 @@
 		color: $footerblue;
 	}
 }
+@media screen and(min-width: 765px) {
+    .footer {
+        display: none;// used as a test for the media query
+    }
+}
