--- a/style.css
+++ b/style.css
@@ -187,7 +187,13 @@ table {
 
 @media screen and (min-width: 765px) {
   .hero {
-    display: none; } }
+    background-position: 0 0;
+    height: 500px; }
+    .hero h1 {
+      font-size: 56px;
+      line-height: 72px;
+      letter-spacing: 2.8px;
+      padding: 170px 20% 0 116px; } }
 .footer {
   width: 100%;
   padding: 35px 0; }
@@ -200,7 +206,11 @@ table {
 
 @media screen and (min-width: 765px) {
   .footer {
-    display: none; } }
+    display: block; }
+    .footer h3 {
+      display: inline-block;
+      width: 49%;
+      size: 21px; } }
 .main_section {
   padding: 0 10px;
   background-color: #ffc400; }
@@ -250,7 +260,7 @@ table {
     font-weight: 700; }
   .main_section div {
     width: 90%;
-    padding: 0 5% 34px; }
+    padding: 0; }
     .main_section div h3 {
       padding: 7px 0;
       color: #4c1a14;
@@ -266,7 +276,31 @@ table {
 
 @media screen and (min-width: 765px) {
   .main_section {
-    display: none; } }
+    padding: 0 2.5%;
+    display: block;
+    width: 80%;
+    position: relative;
+    top: -100px;
+    left: 10%; }
+    .main_section article {
+      height: 100%;
+      width: 50%;
+      display: inline-block; }
+    .main_section aside {
+      width: 40%; }
+    .main_section div {
+      width: 25%;
+      padding: 0;
+      display: inline-block; }
+    .main_section .underbar {
+      padding: 34px 2.5%;
+      height: 225px;
+      vertical-align: top;
+      margin: 50px 0;
+      display: inline-block;
+      width: auto;
+      border-top: 0;
+      border-left: 2px solid #eb503c; } }
 .event {
   width: 255px !important; }
   .event h3 {
@@ -305,9 +339,6 @@ table {
     -o-transform: translate(20px);
     transform: translate(20px); }
 
-@media screen and (min-width: 765px) {
-  .event {
-    display: none; } }
 .core_values {
   padding: 55px 20px;
   color: #021d2c;
@@ -370,13 +401,43 @@ table {
 
 @media screen and (min-width: 765px) {
   .core_values {
-    display: none; }
+    display: block; }
+    .core_values h4 {
+      display: inline-block; }
+    .core_values nav {
+      display: inline-block; }
 
   .greybox {
-    display: none; }
+    padding: 55px 120px;
+    color: #021d2c;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.8px;
+    font-family: "Droid Serif";
+    display: block; }
+    .greybox h3 {
+      font-size: 21px;
+      font-weight: 700;
+      letter-spacing: 1.1px;
+      color: #4e1c07; }
+    .greybox .paragraph_break {
+      padding-top: 15px; }
 
   .normal_sections {
-    display: none; } }
+    padding: 55px 120px;
+    color: #021d2c;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.8px;
+    font-family: "Droid Serif";
+    display: block; }
+    .normal_sections h3 {
+      font-size: 21px;
+      font-weight: 700;
+      letter-spacing: 1.1px;
+      color: #4e1c07; }
+    .normal_sections .paragraph_break {
+      padding-top: 15px; } }
 .schedule {
   padding: 55px 20px;
   color: #021d2c;
@@ -450,12 +511,61 @@ table {
 
 @media screen and (min-width: 765px) {
   .schedule {
-    display: none; }
+    padding: 55px 120px;
+    color: #021d2c;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.8px;
+    font-family: "Droid Serif";
+    align-content: space-between;
+    display: flex;
+    flex-wrap: wrap; }
+    .schedule h3 {
+      font-size: 21px;
+      font-weight: 700;
+      letter-spacing: 1.1px;
+      color: #4e1c07; }
+    .schedule .paragraph_break {
+      padding-top: 15px; }
+    .schedule .event {
+      display: inline-block;
+      padding: 3% 2%; }
 
   .get_involved, .start_meetup {
-    display: none; }
+    padding: 55px 120px;
+    color: #021d2c;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.8px;
+    font-family: "Droid Serif";
+    display: inline-block;
+    width: 30%;
+    padding: 55px 5%; }
+    .get_involved h3, .start_meetup h3 {
+      font-size: 21px;
+      font-weight: 700;
+      letter-spacing: 1.1px;
+      color: #4e1c07; }
+    .get_involved .paragraph_break, .start_meetup .paragraph_break {
+      padding-top: 15px; }
 
   .start_meetup {
-    display: none; } }
+    float: right;
+    padding: 55px 120px;
+    color: #021d2c;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.8px;
+    font-family: "Droid Serif";
+    display: inline-block;
+    width: 47%;
+    padding: 55px 5%; }
+    .start_meetup h3 {
+      font-size: 21px;
+      font-weight: 700;
+      letter-spacing: 1.1px;
+      color: #4e1c07; }
+    .start_meetup .paragraph_break {
+      padding-top: 15px; } }
 
 /*# sourceMappingURL=style.css.map */
