--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -12,6 +12,11 @@
 }
 @media screen and(min-width: 765px) {
     .footer {
-        display: none;// used as a test for the media query
+        display: block;
+        h3 {
+            display: inline-block;
+            width: 49%;
+            size: 21px;
+        }
     }
 }
