--- a/style/_hero.scss
+++ b/style/_hero.scss
@@ -15,6 +15,13 @@
 }
 @media screen and(min-width: 765px) {
     .hero {
-        display: none;// used as a test for the media query
+        background-position: 0 0;
+        height: 500px;
+        h1 {
+            font-size: 56px;
+            line-height: 72px;
+            letter-spacing: 2.8px;
+            padding: 170px 20% 0 116px;
+        }
     }
 }
