--- a/style/_calendar.scss
+++ b/style/_calendar.scss
@@ -64,13 +64,27 @@
     }
     .get_involved {
         @include common;
+        h3 {
+        color: $white;
+        font-size: 21px;
+        line-height: 32px;
+        letter-spacing: 1.1px;
+        font-weight: 700;
+        }
         display: inline-block;
         width: 30%;
         padding: 55px 5%;
     }
     .start_meetup {
-        float: right;
         @include common;
+        h3 {
+        color: $white;
+        font-size: 21px;
+        line-height: 32px;
+        letter-spacing: 1.1px;
+        font-weight: 700;
+        }
+        float: right;
         display: inline-block;
         width: 47%;
         padding: 55px 5%;
