--- a/style/_hero.scss
+++ b/style/_hero.scss
@@ -16,6 +16,7 @@
 @media screen and(min-width: 765px) {
     .hero {
         background-position: 0 0;
+        background-repeat: round;
         height: 500px;
         h1 {
             font-size: 56px;
