--- a/style/_presets.scss
+++ b/style/_presets.scss
@@ -38,7 +38,7 @@ $beige: #efe9d9;
     }
 }
 @mixin common {
-  padding: 55px 120px;
+  padding: 55px 20px 55px 120px;
   color: $blue;
   font-size: 16px;
   line-height: 24px;
