--- a/style.css
+++ b/style.css
@@ -52,9 +52,10 @@ table {
   .header .logo {
     display: inline-block;
     color: #064159;
-    size: 24px;
+    font-size: 24px;
     font-family: "Lato", sans-serif;
-    margin: 21px 0 0 24px;
+    line-height: 58px;
+    margin-left: 20px;
     text-decoration: none;
     letter-spacing: 2.4px; }
     .header .logo .tech {
@@ -108,18 +109,20 @@ table {
   .header {
     height: 77px; }
     .header .logo {
-      margin: 30px 0 0 29px; }
+      line-height: 77px; }
     .header nav {
       float: right;
       margin: 0;
-      width: 550px;
+      width: 490px;
       height: 100%; }
       .header nav img {
         display: none; }
       .header nav ul {
-        display: inline-block; }
+        display: inline-block;
+        width: 100%;
+        height: 100%; }
         .header nav ul li {
-          padding: 0 18px;
+          padding: 0 2%;
           display: inline-block; }
           .header nav ul li a {
             color: #72261d;
@@ -188,6 +191,7 @@ table {
 @media screen and (min-width: 765px) {
   .hero {
     background-position: 0 0;
+    background-repeat: round;
     height: 500px; }
     .hero h1 {
       font-size: 56px;
@@ -234,6 +238,7 @@ table {
       font-weight: 700; }
     .main_section article a {
       margin: 15px auto 0;
+      margin-top: 40px;
       color: #efe9d8;
       text-decoration: none;
       font-size: 18px;
@@ -258,49 +263,47 @@ table {
     letter-spacing: 0.8px;
     font-family: "Lato";
     font-weight: 700; }
-  .main_section div {
-    width: 90%;
-    padding: 0; }
-    .main_section div h3 {
-      padding: 7px 0;
-      color: #4c1a14;
-      font-size: 21px;
-      line-height: 24px;
-      letter-spacing: 1.1px;
-      font-family: "Droid Serif";
-      font-weight: 700; }
-  .main_section .underbar {
-    width: 90%;
-    padding: 34px 5%;
-    border-top: 2px solid #eb503c; }
+  .main_section div h3 {
+    padding: 7px 0;
+    color: #4c1a14;
+    font-size: 21px;
+    line-height: 24px;
+    letter-spacing: 1.1px;
+    font-family: "Droid Serif";
+    font-weight: 700; }
+
+.underbar {
+  width: 90%;
+  padding: 34px 5%;
+  border-top: 2px solid #eb503c; }
 
 @media screen and (min-width: 765px) {
   .main_section {
-    padding: 0 2.5%;
-    display: block;
+    display: flex;
+    min-width: 670px;
+    padding: 0;
     width: 80%;
     position: relative;
     top: -100px;
-    left: 10%; }
+    left: 10%;
+    align-items: center; }
     .main_section article {
       height: 100%;
-      width: 50%;
-      display: inline-block; }
-    .main_section aside {
-      width: 40%; }
-    .main_section div {
-      width: 25%;
-      padding: 0;
-      display: inline-block; }
-    .main_section .underbar {
-      padding: 34px 2.5%;
-      height: 225px;
-      vertical-align: top;
-      margin: 50px 0;
-      display: inline-block;
       width: auto;
-      border-top: 0;
-      border-left: 2px solid #eb503c; } }
+      display: inline-block; }
+    .main_section aside h4:first-child {
+      padding: 0 2.5%; }
+    .main_section div {
+      display: inline-block; }
+
+  .underbar {
+    padding: 0 2.5%;
+    height: 100%;
+    vertical-align: top;
+    margin: 2.5% 0;
+    display: inline-block;
+    border-top: 0;
+    border-left: 2px solid #eb503c; } }
 .event {
   width: 255px !important; }
   .event h3 {
@@ -401,14 +404,45 @@ table {
 
 @media screen and (min-width: 765px) {
   .core_values {
-    display: block; }
+    padding: 55px 20px 55px 120px;
+    color: #021d2c;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.8px;
+    font-family: "Droid Serif";
+    display: flex;
+    align-items: center;
+    justify-content: space-between; }
+    .core_values h3 {
+      font-size: 21px;
+      font-weight: 700;
+      letter-spacing: 1.1px;
+      color: #4e1c07; }
+    .core_values .paragraph_break {
+      padding-top: 15px; }
     .core_values h4 {
       display: inline-block; }
     .core_values nav {
+      width: 300px;
       display: inline-block; }
+      .core_values nav h4 {
+        color: #eb503c;
+        font-size: 16px;
+        line-height: 24px;
+        font-style: normal;
+        letter-spacing: 0.8px;
+        font-family: "Lato";
+        font-weight: 700;
+        display: block; }
+      .core_values nav a {
+        display: block;
+        text-decoration: none;
+        line-height: 36px; }
+      .core_values nav a:hover {
+        text-decoration: underline; }
 
   .greybox {
-    padding: 55px 120px;
+    padding: 55px 20px 55px 120px;
     color: #021d2c;
     font-size: 16px;
     line-height: 24px;
@@ -424,7 +458,7 @@ table {
       padding-top: 15px; }
 
   .normal_sections {
-    padding: 55px 120px;
+    padding: 55px 20px 55px 120px;
     color: #021d2c;
     font-size: 16px;
     line-height: 24px;
@@ -511,7 +545,7 @@ table {
 
 @media screen and (min-width: 765px) {
   .schedule {
-    padding: 55px 120px;
+    padding: 55px 20px 55px 120px;
     color: #021d2c;
     font-size: 16px;
     line-height: 24px;
@@ -532,7 +566,7 @@ table {
       padding: 3% 2%; }
 
   .get_involved, .start_meetup {
-    padding: 55px 120px;
+    padding: 55px 20px 55px 120px;
     color: #021d2c;
     font-size: 16px;
     line-height: 24px;
@@ -548,15 +582,21 @@ table {
       color: #4e1c07; }
     .get_involved .paragraph_break, .start_meetup .paragraph_break {
       padding-top: 15px; }
+    .get_involved h3, .start_meetup h3 {
+      color: #efe9d8;
+      font-size: 21px;
+      line-height: 32px;
+      letter-spacing: 1.1px;
+      font-weight: 700; }
 
   .start_meetup {
-    float: right;
-    padding: 55px 120px;
+    padding: 55px 20px 55px 120px;
     color: #021d2c;
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.8px;
     font-family: "Droid Serif";
+    float: right;
     display: inline-block;
     width: 47%;
     padding: 55px 5%; }
@@ -566,6 +606,12 @@ table {
       letter-spacing: 1.1px;
       color: #4e1c07; }
     .start_meetup .paragraph_break {
-      padding-top: 15px; } }
+      padding-top: 15px; }
+    .start_meetup h3 {
+      color: #efe9d8;
+      font-size: 21px;
+      line-height: 32px;
+      letter-spacing: 1.1px;
+      font-weight: 700; } }
 
 /*# sourceMappingURL=style.css.map */
