--- a/style/_header.scss
+++ b/style/_header.scss
@@ -7,9 +7,10 @@
 	.logo {
 		display: inline-block;
 		color: $headerblue;
-		size: 24px;
+		font-size: 24px;
 	    font-family: "Lato", sans-serif;
-		margin: 21px 0 0 24px;
+		line-height: 58px;
+        margin-left: 20px;
 		text-decoration: none;
 		letter-spacing: 2.4px;
 		//split up words into two in order to set different fonts
@@ -79,20 +80,22 @@
     .header {
         height: 77px;
         .logo {
-            margin: 30px 0 0 29px;
+            line-height: 77px;
         }
         nav {
 		  float: right;
 		  margin: 0;
-		  width: 550px;
+		  width: 490px;
 		  height: 100%;
 		  img {
 			display: none;
 		  }
 		  ul {
 			display: inline-block;
+              width: 100%;
+              height: 100%;
             li {
-                padding: 0 18px;
+                padding: 0 2%;
                 display: inline-block;
                 a {
 					color: $headerbrown;
